# pyrovelocity

./: .bazelrc  .dockerignore  .dvcignore  .envrc  .envrc.example  .example.env  .gcloudignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-local.yaml  .prettierignore  .readthedocs.yml  .taplo.toml  .teller.yml  .travis.yml  AUTHORS.rst  BUILD.bazel  CHANGELOG.md  CITATION.bib  CONTRIBUTING.rst  Dockerfile  Dockerfile.conda  HISTORY.rst  MODULE.bazel  Makefile  README.md  README.rst  SECURITY.md  backup.BUILD.txt  cloudbuild.yaml  cspell.json  dev.example.cue  docker-config.example.json  flake.nix  gazelle_python.yaml  implementation-plan-piecewise-activation-validation.md  justfile  noxfile.py  package.json  (+17 more)
src/pyrovelocity/: BUILD.bazel  __init__.py  __main__.py  _trainer.py  _transcription_dynamics.py  _velocity.py  _velocity_guide.py  _velocity_model.py  _velocity_model_deprecated.py  _velocity_model_minimal.py  _velocity_module.py  analyze.py  api.py  cli.py  config.py  cytotrace.py  data.py  help.py  interfaces.py  logging.py  plot.py  postprocess.py  preprocess.py  pyrovelocity.py  random_state.py  summarize.py  train.py  utils.py
src/pyrovelocity/analysis/: __init__.py  analyze.py  cytotrace.py  subpopulation.py  trajectory.py  transcriptome_properties.py
src/pyrovelocity/flytezen/: configuration.py  constants.py  logging.py
src/pyrovelocity/flytezen/cli/: __init__.py  execute.py  execution_utils.py
src/pyrovelocity/flytezen/workflows/: lrwine.py  main_workflow.py
src/pyrovelocity/io/: __init__.py  archive.py  cluster.py  compressedpickle.py  datasets.py  drive.py  ensembl.py  ensembl_batch.py  fetch.py  fsspec.py  gcs.py  hash.py  json.py  metrics.py  serialization.py  sparsity.py  subset_data.py
src/pyrovelocity/metrics/: criticality_index.py  hypersphere_distribution_divergence.py  trajectory.py
src/pyrovelocity/models/: __init__.py  _deterministic_inference.py  _deterministic_simulation.py  _hyperparameter_calibration.py  _trainer.py  _transcription_dynamics.py  _velocity.py  _velocity_model.py  _velocity_module.py  adapters.py  base.py  comparison.py  dynamics.py  factory.py  guides.py  interfaces.py  likelihoods.py  model.py  observations.py  priors.py  registry.py  selection.py
src/pyrovelocity/models/adapters/: __init__.py  modular_to_mono.py  mono_to_modular.py
src/pyrovelocity/models/components/: __init__.py  base.py  dynamics.py  guides.py  likelihoods.py  observations.py  priors.py
src/pyrovelocity/models/experimental/: __init__.py  deterministic_inference.py  deterministic_simulation.py
src/pyrovelocity/models/jax/: __init__.py
src/pyrovelocity/models/knn_model/: __init__.py  _vector_fields.py  _velocity.py  _velocity_model.py  _velocity_module.py  regulatory_functions_torch.py
src/pyrovelocity/models/modular/: __init__.py  comparison.py  config.py  constants.py  factory.py  interfaces.py  metadata.py  model.py  registry.py  selection.py  validation.py
src/pyrovelocity/plots/: __init__.py  _common.py  _count_histograms.py  _dynamics.py  _experimental.py  _genes.py  _lineage_fate_correlation.py  _parameters.py  _predictive.py  _rainbow.py  _report.py  _summary.py  _time.py  _trajectory.py  _uncertainty.py  _vector_fields.py  layout.py  model_comparison.py  models.py  parameter_metadata.py  predictive_checks.py  rainbow.py  report.py
src/pyrovelocity/styles/: __init__.py  colors.py  common.mplstyle  configure.py
src/pyrovelocity/tasks/: __init__.py  data.py  evaluate.py  postprocess.py  preprocess.py  summarize.py  time_fate_correlation.py  train.py
src/pyrovelocity/tests/: BUILD.bazel  config_test.py  conftest.py  pyrovelocity_test.py  synthetic_AnnData.py  test_compressedpickle.py  test_criticality_index.py  test_cytotrace.py  test_data.py  test_deterministic_inference.py  test_deterministic_simulation.py  test_plot.py  test_preprocess.py  test_random_state.py  test_synthetic_AnnData.py  test_transcription_dynamics.py  test_utils.py  test_velocity_model.py  test_velocity_module.py  velocity_test.py
src/pyrovelocity/tests/analysis/: __init__.py  test_analyze.py  test_cytotrace.py  test_subpopulation.py  test_trajectory.py  test_transcriptome_properties.py
src/pyrovelocity/tests/data/: larry_multilineage_50_6.json  pancreas_50_13.json  postprocessed_larry_multilineage_50_6.json  postprocessed_pancreas_50_7.json  preprocessed_3_4.json  preprocessed_larry_multilineage_50_6.json  preprocessed_pancreas_50_7.json  trained_larry_multilineage_50_6.json  trained_pancreas_50_7.json
src/pyrovelocity/tests/fixtures/: generate_anndata_fixtures.py  get_fixture_hashes.py
src/pyrovelocity/tests/io/: __init__.py  test_cluster.py  test_compressedpickle.py  test_hash.py  test_serialization.py  test_sparsity.py  test_subset_data.py
src/pyrovelocity/tests/metrics/: __init__.py  test_trajectory.py
src/pyrovelocity/tests/models/: __init__.py  test_adapters.py  test_base.py  test_comparison.py  test_deterministic_inference.py  test_deterministic_simulation.py  test_dynamics.py  test_factory.py  test_guides.py  test_likelihoods.py  test_model.py  test_observations.py  test_priors.py  test_registry.py  test_selection.py  test_trainer.py  test_transcription_dynamics.py  test_velocity.py  test_velocity_model.py  test_velocity_module.py
src/pyrovelocity/tests/plots/: __init__.py  conftest.py  test_count_histograms.py  test_genes.py  test_lineage_fate_correlation.py  test_model_comparison.py  test_pdf_combination.py  test_plots.py  test_posteriors.py  test_predictive.py  test_rainbow.py  test_summary.py  test_time.py  test_training_loss.py  test_vector_fields.py  test_visualization.py
src/pyrovelocity/tests/tasks/: __init__.py  conftest.py  test_data.py  test_evaluate.py  test_postprocess.py  test_preprocess.py  test_summarize.py  test_time_fate_correlation.py  test_train.py  test_train_model.py
src/pyrovelocity/validation/: README.md  __init__.py  comparison.py  framework.py  metrics.py  visualization.py
src/pyrovelocity/workflows/: configuration.py  constants.py  main_configuration.py  main_workflow.py  notebooks.py
(+839 files in other folders)
