"""
pyrovelocity MODULE
"""

module(
    name = "pyrovelocity",
    version = "0.2.0b5",
    compatibility_level = 1,
)

bazel_dep(name = "aspect_bazel_lib", version = "2.2.0")
# bazel_dep(name = "aspect_rules_py", version = "0.5.0")
bazel_dep(name = "rules_python", version = "0.28.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    python_version = "3.11",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

pip.parse(
    experimental_target_platforms = ["all"],
    hub_name = "pip",
    python_version = "3.11",
    requirements_lock = "//:requirements-bazel.txt",
)
use_repo(pip, "pip")
