"""
pyrovelocity MODULE
"""

module(
    name = "pyrovelocity",
    version = "0.2.0b13",
    compatibility_level = 1,
)

bazel_dep(name = "aspect_bazel_lib", version = "2.4.2")

# bazel_dep(name = "aspect_rules_py", version = "0.5.0")
bazel_dep(name = "rules_python", version = "0.29.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    python_version = "3.10",
    is_default = True,
)
# python.toolchain(
#     configure_coverage_tool = True,
#     python_version = "3.11",
#     is_default = False,
# )
# use_repo(python, "python_3_10", "python_3_11", "python_versions")
#
# use
#
# load("@python_versions//3.10:defs.bzl", "py_test")
# load("@python_versions//3.11:defs.bzl", "py_test")
#
# in BUILD files instead of
#
# load("@rules_python//python:defs.bzl", "py_test")
#
# to load version-specific rules
# https://rules-python.readthedocs.io/en/latest/getting-started.html#pinning-to-a-python-version

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

pip.parse(
    experimental_target_platforms = ["all"],
    hub_name = "pip",
    python_version = "3.10",
    requirements_lock = "//:requirements-bazel.txt",
)
use_repo(pip, "pip")
