"""
pyrovelocity BUILD
"""
# load("@pip//:requirements.bzl", "requirement")
load("@pip//:requirements.bzl", "all_requirements")
# load("//bazel:python.bzl", "xdoctest")
load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "pyrovelocity",
    srcs = glob(["**/*.py"], exclude=["tests/**/*.py"]),
    deps = all_requirements,
    visibility = [
        "//:__pkg__",
        "//:__subpackages__",
    ],
)

# xdoctest(
#     files = glob(
#         include=["**/*.py"],
#         exclude=[
#             "flytezen/**",
#             "pyrovelocity.py",
#             "tests/**",
#         ]
#     ),
#     deps = all_requirements,
# )
